--- a/app/Resources/views/default/addOrder.html.twig
+++ b/app/Resources/views/default/addOrder.html.twig
@@ -14,6 +14,11 @@
         {{ form_row(form.pickUpDate, {'attr': {'class': 'form-control'}}) }}
     </div>
 </div>
+<div class="form_group">
+    <div class="col-md-8 col-md-offset-2">
+        {{ form_row(form.category, {'attr': {'class': 'form-control'}}) }}
+    </div>
+</div>
 <div class="form-group">
     <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
         <button type="submit" class="btn btn-primary">
