--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,106 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="{{ asset('bundles/app/css/toastr.css') }}" rel="stylesheet">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/fa/fontawesome-all.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/bootstrap.css') }}">
+    <style>
+        body {
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
+    </style>
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/bootstrap-theme.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/main.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/vanillaCalendar.css') }}">
+</head>
+<body class="{% block body_type %}{% endblock %}">
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+{% block nav %}
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand logo" href="{{ path('homepage') }}"><img src="{{ asset('bundles/app/img/logo-white.png') }}"/></a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse navbar-right">
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ path('homepage') }}">Acas&#259;</a></li>
+                    {% if app.user %}
+                            <li><a href="{{ path('order') }}">Comand&#259;</a></li>
+                            <li><a href="{{ path('donate') }}">Doneaz&#259;</a></li>
+                            <li class="loggedin"><a href="{{ path('order') }}">Comenzile mele</a></li>
+                            <li class="divider"></li>
+                            <li class="loggedout"><a href="{{ path('logout') }}">Ie&#537;ire din cont</a></li>
+                    {% else %}
+                        <li class="loggedout"><a href="{{ path('login') }}">Intrare in cont</a></li>
+                        <li><a href="{{ path('register') }}">&#206;nregistrare</a></li>
+                    {% endif %}
+                </ul>
+            </div><!--/.navbar-collapse -->
+        </div>
+    </nav>
+{% endblock %}
+
+{% block body %}
+
+{% endblock %}
+
+{% block bottom_scripts %}
+    <script src="{{ asset('bundles/app/js/vendor/jquery-1.11.2.min.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/vendor/bootstrap.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script>
+        toastr.options = {
+            "closeButton": false,
+            "debug": false,
+            "newestOnTop": false,
+            "progressBar": false,
+            "positionClass": "toast-bottom-center",
+            "preventDuplicates": false,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "7000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        };
+    </script>
+    <script>
+        {% include 'default/toasts.js.twig' %}
+    </script>
+    <script src="{{ asset('bundles/app/js/main.js') }}"></script>
+
+{% endblock %}
+{#<script src="{{ asset('bundles/app/js/vendor/vanillaCalendar.js') }}"></script>#}
+{#<script src="{{ asset('bundles/app/js/vendor/countUp.min.js') }}"></script>#}
+
+
+{#<script>#}
+    {#window.addEventListener('load', function () {#}
+        {#vanillaCalendar.init({disablePastDays : true}, new Date());#}
+    {#})#}
+{#</script>#}
+</body>
 </html>
