--- a/app/Resources/views/default/register.html.twig
+++ b/app/Resources/views/default/register.html.twig
@@ -1,40 +1,53 @@
+{% extends 'base.html.twig' %}
+
+{% block body %}
 <div class="container">
+    <!-- Example row of columns -->
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <div class="panel panel-default">
-                <div class="panel-heading">Register</div>
-                <div class="panel-body">
-                    {{ form_start(form) }}
-                    <div class="form_group">
-                        <div class="col-md-8 col-md-offset-2">
-                            {{ form_row(form.name, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div>
-                    <div class="form_group">
-                        <div class="col-md-8 col-md-offset-2">
-                            {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div>
-                    <div class="form_group">
-                        <div class="col-md-8 col-md-offset-2">
-                            {{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div>
-                    <div class="form_group">
-                        <div class="col-md-8 col-md-offset-2">
-                            {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fa fa-btn fa-user"></i> Register
-                            </button>
-                        </div>
-                    </div>
-                    {{ form_end(form) }}
+        <div class="col-md-12">
+            <h1 class="title">&#206;nregistrare</h1>
+            {{ form_start(form) }}
+            <div class="form_group">
+                <div class="col-md-12">
+                    {{ form_row(form.name, {'attr': {'class': 'form-control'}}) }}
                 </div>
             </div>
+            <div class="form_group">
+                <div class="col-md-12">
+                    {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
+            <div class="form_group">
+                <div class="col-md-12">
+                    {{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
+            <div class="form_group">
+                <div class="col-md-12">
+                    {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-8" style="margin-top:5px;">
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fa fa-btn fa-user"></i> Register
+                    </button>
+                </div>
+            </div>
+
+            {{ form_end(form) }}
         </div>
     </div>
-</div
+    <hr>
+
+    <footer>
+        <p>&copy; Company 2015</p>
+    </footer>
+</div> <!-- /container -->
+{% endblock %}
+
+{% block bottom_scripts %}
+    {{ parent() }}
+    <script src="{{ asset('bundles/app/js/vendor/TweenMax.min.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/login-animate.js') }}"></script>
+{% endblock %}
