--- a/app/Resources/views/default/order.html.twig
+++ b/app/Resources/views/default/order.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container">
+<div class="container main-content">
     <!-- Example row of columns -->
     <div class="row">
         <div class="col-md-12">
@@ -45,10 +45,6 @@
             {{ form_end(form) }}
         </div>
     </div>
-    <hr>
-    <footer>
-        <p>&copy; Company 2015</p>
-    </footer>
 </div> <!-- /container -->
 {% endblock %}
 {% block bottom_scripts %}
