--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,8 +1,5 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<html class="no-js" lang="" id="{% block html_id %}default{% endblock %}">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -25,7 +22,7 @@
     <link rel="stylesheet" href="{{ asset('bundles/app/css/main.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/app/css/vanillaCalendar.css') }}">
 </head>
-<body class="{% block body_type %}{% endblock %}">
+<body id="{% block body_type %}{% endblock %}">
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -47,7 +44,7 @@
                     {% if app.user %}
                             <li><a href="{{ path('order') }}">Comand&#259;</a></li>
                             <li><a href="{{ path('donate') }}">Doneaz&#259;</a></li>
-                            <li class="loggedin"><a href="{{ path('order') }}">Comenzile mele</a></li>
+                            <li class="loggedin"><a href="{{ path('list_orders') }}">Comenzile mele</a></li>
                             <li class="divider"></li>
                             <li class="loggedout"><a href="{{ path('logout') }}">Ie&#537;ire din cont</a></li>
                     {% else %}
