--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
+
+{% block body_type %}homepage{% endblock %}
+{% block html_id %}homepage-html{% endblock %}
 {% block body %}
 <div class="container">
     <div class="container presentation">
         <div class="row">
-            <div class="col-md-4"><span id="n1">123</span></div>
-            <div class="col-md-4"><span id="n2">21241241</span></div>
-            <div class="col-md-4"><span id="n3">23121231231231</span></div>
+            <div class="col-md-4"><i class="fas fa-utensils"></i><p id="n1">2550000</p> tone de m&#226;ncare irosita anual in Romania.</div>
+            <div class="col-md-4"><i class="fas fa-user"></i><p id="n2">132495</p> grame de m&#226;ncare irosita de o persoana anual in medie.</div>
+            <div class="col-md-4"><i class="far fa-trash-alt"></i><p id="n3">30%</p> din alimente sunt irosite.</div>
         </div>
     </div>
 </div>
