--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -7,6 +7,23 @@
 body {
     font-family: 'Montserrat', sans-serif;
     color: #000;
+    background: #eff3f4;
+}
+
+.main-content {
+    border: solid 1px #DDD;
+    border-radius: .5em;
+    padding: 1em;
+    background: #fff;
+    margin: 1em auto;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right
 }
 
 #homepage,
@@ -44,9 +61,13 @@ body {
 
 #homepage .presentation {
     padding-top: 6em;
-    font-size: 3em;
+    font-size: 2em;
     text-align: center;
     text-shadow: 2px 2px #000;
+}
+
+#homepage .presentation i {
+    font-size: 4em;
 }
 
 label {
@@ -186,48 +207,48 @@ select {
 
 /* form */
 
-body.register {
+body#register {
     background-color: #eff3f4; position: relative; width: 100%; height: 100%;
     -webkit-font-smoothing: antialiased;
 }
 
-.register form {
+#register form {
     display: block; width: 100%; max-width: 400px; background-color: #FFF;
     margin: 1em auto; padding: 2.25em; box-sizing: border-box; border: solid 1px #DDD; border-radius: .5em;
     font-family: 'Montserrat', sans-serif;
 }
 
-.register form .svgContainer {
+#register form .svgContainer {
     position: relative; width: 200px; height: 200px; margin: 0 auto 1em;
     border-radius: 50%; background: none; border: solid 2.5px #f3c81b; overflow: hidden;
     pointer-events: none;
 }
 
-.register form .svgContainer div {
+#register form .svgContainer div {
     position: relative; width: 100%; height: 0; overflow: hidden;
     padding-bottom: 100%;
 }
-.register form .svgContainer .mySVG {
+#register form .svgContainer .mySVG {
     position: absolute; left: 0; top: 0; width: 100%; height: 100%;
     pointer-events: none;
 }
 
 
-.register form .inputGroup {
+#register form .inputGroup {
     margin: 0 0 2em; padding: 0; position: relative;
 }
 
-.register form .inputGroup:last-of-type {
+#register form .inputGroup:last-of-type {
     margin-bottom: 0;
 }
 
-.register form label {
+#register form label {
     margin: 0 0 12px; display: block;
     font-size: 1.25em; color: #F4CE33; font-weight: 700; font-family: inherit;
 }
-.register form input[type='email'],
-.register form input[type="text"],
-.register form input[type='password'] {
+#register form input[type='email'],
+#register form input[type="text"],
+#register form input[type='password'] {
     display: block; margin: 0; padding: 0 1em 0;
     background-color: #f3fafd; border: solid 2px #F4CE33; border-radius: 4px; -webkit-appearance: none;
     box-sizing: border-box;
@@ -235,15 +256,15 @@ body.register {
     font-size: 1.55em; color: #353538; font-weight: 600; font-family: inherit;
     transition: box-shadow .2s linear, border-color .25s ease-out;
 }
-.register form input[type='email']:focus,
-.register form input[type="text"]:focus,
-.register form input[type='password']:focus {
+#register form input[type='email']:focus,
+#register form input[type="text"]:focus,
+#register form input[type='password']:focus {
     outline: none;
     box-shadow: 0px 2px 10px rgba(0,0,0,.1);
     border: solid 2px #ce33f4;
 }
 
-.register form button {
+#register form button {
     display: block; margin: 0;
     box-sizing: border-box; box-shadow: none;
     width: 100%; height: 65px;
@@ -251,16 +272,16 @@ body.register {
     transition: background-color .2s ease-out;
 }
 
-.register form button:hover,
-.register form button:active {
+#register form button:hover,
+#register form button:active {
     background-color: #ce33f4;
 }
 
-.register form .inputGroup1 .helper {
+#register form .inputGroup1 .helper {
     position: absolute; z-index: 1;
     font-family: inherit;
 }
-.register form .inputGroup1 .helper1 {
+#register form .inputGroup1 .helper1 {
     top: 0; left: 0;
     transform: translate(1.4em, 2.6em) scale(1); transform-origin: 0 0;
     color: #F4CE33; font-size: 1.25em; font-weight: 400; opacity: .65;
@@ -268,7 +289,7 @@ body.register {
     transition: transform .2s ease-out, opacity .2s linear;
 }
 
-.register form .inputGroup1 .focusWithText .helper {
+#register form .inputGroup1 .focusWithText .helper {
     /*input[type='email']:focus + .helper {*/
     transform: translate(1.4em, 2.0em) scale(.65); opacity: 1;
 }
@@ -289,7 +310,7 @@ body.register {
 }
 
 #map {
-    height: 400px;
+    height: 500px;
 }
 
 .logo {
@@ -299,4 +320,49 @@ body.register {
 .logo > img {
     height: 40px;
     display: block;
+}
+
+@media (max-width: 800px) {
+    #homepage .presentation {
+        font-size: 1.5em;
+    }
+
+    #homepage .presentation i {
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 1em;
+        font-size: 2em;
+        float: left;
+        width: 40px;
+    }
+
+    #homepage .presentation p {
+        display: inline;
+        vertical-align: middle;
+    }
+    #homepage .presentation {
+        text-align: left;
+    }
+
+    #homepage .presentation .col-md-4 {
+        margin-top: 2em;
+    }
+
+}
+
+@media (max-width: 800px) {
+
+    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+        background: #fff;
+    }
+
+    #homepage .navbar-inverse .navbar-brand, #homepage .navbar-inverse .navbar-nav > li > a {
+        color: #F4CE33;
+    }
+}
+
+@media (max-device-width: 480px) and (orientation: landscape) {
+    .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
+        max-height: 600px;
+    }
 }
