--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -103,11 +103,11 @@
                 <span class="indicator"></span>
             </div>
             <div class="inputGroup inputGroup2">
-                <label for="password">Password</label>
+                <label for="password">Parol&#259</label>
                 <input type="password" id="password" name="_password" class="password form-control" />
             </div>
             <div class="inputGroup inputGroup3">
-                <button id="login" class="btn btn-success">Log in</button>
+                <button id="login" class="btn btn-success">Logare</button>
             </div>
         </form>
         <hr>
