--- a/app/Resources/views/default/orderListing.html.twig
+++ b/app/Resources/views/default/orderListing.html.twig
@@ -1,13 +1,38 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
-
     <div class="container main-content">
+        <div class="row" style="margin:0 !important;">
+            <div class="col-lg-12" style="text-align: center">
+                <h1 class="title">Mancare irosită</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div id="donutchart" style="width: 100%; min-height: 450px;"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12" style="text-align: center">
+                <h1 class="title">Cantitate comandată per zi</h1>
+            </div>
+        </div>
+        <div class="row" style="margin:0 !important;">
+            <div class="col-lg-12s">
+                <div id="curve_chart" style="width: 100%; min-height: 450px;"></div>
+            </div>
+        </div>
+
+        <div class="row" style="margin:0 !important;">
+            <div class="col-lg-12" style="text-align: center">
+                <h1 class="title">Comenzi viitoare</h1>
+            </div>
+        </div>
+
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-12">
-                <h1 class="title">Comenzi viitoare</h1>
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -30,8 +55,10 @@
             </div>
         </div>
         <div class="row">
+            <h1 class="title" style="text-align: center">Comenzi trecute</h1>
+        </div>
+        <div class="row">
             <div class="col-md-12">
-                <h1 class="title">Comenzi trecute</h1>
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -54,4 +81,48 @@
             </div>
         </div>
     </div>
+{% endblock %}
+{% block bottom_scripts %}
+    {{ parent() }}
+        <script src="{{ asset('bundles/app/js/loader.js') }}"></script>
+        <script type="text/javascript">
+            google.charts.load("current", {packages:["corechart", "line"]});
+            google.charts.setOnLoadCallback(drawChart);
+
+            function drawChart() {
+                var data = google.visualization.arrayToDataTable(
+                        {{ mostWastedCategories | raw }}
+                );
+
+                var options = {
+                    pieHole: 0.4,
+                    legend: {position: 'none'},
+                    fontName: 'Montserrat',
+                    colors: ['#746218', '#F4CE33', '#B49826', '#DAB82E', '#E99A26']
+                };
+
+                var chart = new google.visualization.PieChart(document.getElementById('donutchart'));
+                chart.draw(data, options);
+                var data = google.visualization.arrayToDataTable({{ mostWastedDays | raw }});
+
+                var options = {
+                    curveType: 'function',
+                    legend: {position: 'none'},
+                    vAxis: { gridlines: { count: 4 },     viewWindow: {
+                        min: 0
+                    }},
+                    lineWidth: 3,
+                    fontName: 'Montserrat',
+                    colors: ['#F4CE33', '#d3362d', '#e7711b',
+                        '#e49307', '#e49307', '#b9c246'],
+                };
+
+                var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+                chart.draw(data, options);
+            }
+            $(window).resize(function(){
+                drawChart();
+            });
+        </script>
 {% endblock %}
